Fixed bug that cause footer line to not touch the left side of screen on mobile devices

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -375,6 +375,10 @@ footer {
         position: relative;
         width: 100%;
         bottom: 0;
+        margin: 0;
+    }
+    
+    .resources {
         margin: 5px;
     }
 }
